objects/Work_Request__e.object
<CustomObject>
    <fields>
        <fullName>assigned_Resource_Id__c</fullName>
        <label>assigned Resource Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>assigned_Resource_Name__c</fullName>
        <label>assigned Resource Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>assignment_End__c</fullName>
        <label>assignment End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>assignment_Start__c</fullName>
        <label>assignment Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>city__c</fullName>
        <label>city</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>comment__c</fullName>
        <label>comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>completion_Time__c</fullName>
        <label>completion Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>contact_Name__c</fullName>
        <label>contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>country__c</fullName>
        <label>country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dealer_Id__c</fullName>
        <label>dealer Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>due_Date__c</fullName>
        <label>due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>earliest_Start_Date__c</fullName>
        <label>earliest Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>estimated_Duration__c</fullName>
        <label>estimated Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>event_type__c</fullName>
        <label>event type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>incomplete_Time__c</fullName>
        <label>incomplete Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>inspection_Id__c</fullName>
        <label>inspection Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legacy_Resource_Id__c</fullName>
        <label>legacy Resource Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legacy_System__c</fullName>
        <label>legacy System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>local_Assignment_End__c</fullName>
        <label>local Assignment End</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>local_Assignment_Start__c</fullName>
        <label>local Assignment Start</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>local_Completion_Time__c</fullName>
        <label>local Completion Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>local_Incomplete_Time__c</fullName>
        <label>local Incomplete Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>local_Pinned_Time__c</fullName>
        <label>local Pinned Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>local_Scheduled_End__c</fullName>
        <label>local Scheduled End</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>local_Scheduled_Start__c</fullName>
        <label>local Scheduled Start</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ns_Invoice_Id__c</fullName>
        <label>ns Invoice Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>origin_System__c</fullName>
        <label>origin System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>origin__c</fullName>
        <label>origin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>original_Due_Date__c</fullName>
        <label>original Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pinned_Time__c</fullName>
        <label>pinned Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>postal_Code__c</fullName>
        <label>postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>previous_Status__c</fullName>
        <label>previous Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>reason__c</fullName>
        <label>reason</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>scheduled_End__c</fullName>
        <label>scheduled End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>scheduled_Start__c</fullName>
        <label>scheduled Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>state__c</fullName>
        <label>state</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <label>status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>street__c</fullName>
        <label>street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>update_User__c</fullName>
        <label>update User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vehicle_Color__c</fullName>
        <label>vehicle Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vehicle_Make__c</fullName>
        <label>vehicle Make</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vehicle_Model__c</fullName>
        <label>vehicle Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vehicle_Vin__c</fullName>
        <label>vehicle Vin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vehicle_Year__c</fullName>
        <label>vehicle Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>work_Order_Work_Type__c</fullName>
        <label>work Order Work Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>work_Request_Id__c</fullName>
        <label>work Request Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>work_Type__c</fullName>
        <label>work Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Work Request</label>
    <pluralLabel>Work Requests</pluralLabel>
</CustomObject>